apps/01-grafana-operator/networkpolicy.yaml
 # Copyright 2024 CS Group
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-operator
  namespace: "monitoring"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana-operator
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
        - port: 3000
